--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "smooth-scrollbar": "^8.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
