--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tabler/icons-react": "^3.28.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "clsx": "^2.1.1",
     "file-loader": "^6.2.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.17.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.0",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4",
